--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,27 +1,3 @@
-stages:
-  - build
-
-build-backend-code-job:
-  stage: build  
-  only:
-    changes:
-    - backend/*
-  script:
-    - cd backend
-    - mvn package
-  artifacts:
-    paths:
-      - backend/target/sausage-store-0.0.1-SNAPSHOT.jar
-
-build-frontend-code-job:
-  stage: build  
-  only:
-    changes:
-    - frontend/*
-  script:        
-    - cd frontend
-    - npm install
-    - npm run build
-  artifacts:
-    paths:
-      - frontend/dist/frontend 
+include:
+  - local: backend/.gitlab-ci.yml
+  - local: frontend/.gitlab-ci.yml
