--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages: [build, notify]
 # этот job поедет на Shell-раннере
 build-backend-code-job:
   stage: build
-  tags: [shell]          # ← чтобы джоба попала на shell-runner
+  tags: [local]          # ← чтобы джоба попала на shell-runner
   only:
     changes: [backend/**/*]
   script:
