--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build-backend-code-job:
     - mvn -B -DskipTests package
   artifacts:
     name: "backend-$CI_COMMIT_SHORT_SHA"
-    paths: [backend/target/*.jar]
+    paths: [backend/*.jar]
     expire_in: 10 week
     when: always
 
