--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -1,38 +1,32 @@
-stages:
-  - build
-  - notify
+stages: [build, notify]
 
+# этот job поедет на Shell-раннере
 build-frontend-code-job:
   stage: build
-  image: node:16
+  tags: [gitlab_runner_1]          # ← чтобы джоба попала на shell-runner
   only:
-    changes:
-      - frontend/**/*
+    changes: [frontend/*]
   script:
     - cd frontend
     - npm install
     - npm run build
   artifacts:
     name: "frontend-$CI_COMMIT_SHORT_SHA"
-    paths:
-      - frontend/dist/frontend
-    expire_in: 1 week
+    paths: [frontend/dist/frontend]
+    expire_in: 10 week
     when: always
 
 telegram-notification-frontend:
   stage: notify
-  image: curlimages/curl:8.10.1
-  needs: ["build-frontend-code-job"]
+  tags: [gitlab_runner_1]
+  needs: [build-frontend-code-job]
   only:
-    changes:
-      - frontend/**/*
+    changes: [frontend/*]
     variables:
       - $CI_COMMIT_MESSAGE =~ /send notification/i
-  script:
-    - |
-      ARTIFACT_URL="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHA/download?job=build-frontend-code-job"
-      MSG="✅ *Frontend build success*\nProject: *$CI_PROJECT_PATH*\nBranch: *$CI_COMMIT_REF_NAME*\nCommit: \`$CI_COMMIT_SHORT_SHA\`\nArtifacts: $ARTIFACT_URL"
-      curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
-        -d chat_id="$TELEGRAM_CHAT_ID" \
-        -d parse_mode=Markdown \
-        --data-urlencode text="$MSG"
+  script: |
+    ARTIFACT_URL="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHA/download?job=build-frontend-code-job"
+    MSG="✅ *Frontend build success*\nProject: *$CI_PROJECT_PATH*\nBranch: *$CI_COMMIT_REF_NAME*\nCommit: \`$CI_COMMIT_SHORT_SHA\`\nArtifacts: $ARTIFACT_URL"
+    curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+      -d chat_id="$TELEGRAM_CHAT_ID" -d parse_mode=Markdown \
+      --data-urlencode text="$MSG"
