--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -8,12 +8,12 @@ build-frontend-code-job:
   before_script:
     - 'export NVM_DIR="$HOME/.nvm"'
     - '[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"'
-    - nvm use 10 || nvm install 10
+    - nvm install 10
     - npm -v
   script:
     - cd frontend
-    - npm ci || npm install
-    - npx ng build --prod || npm run build
+    - npm install
+    - npm run build
   artifacts:
     name: "frontend-$CI_COMMIT_SHORT_SHA"
     paths: [frontend/dist/frontend]
