--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -2,30 +2,39 @@ stages: [build, notify]
 
 build-backend-code-job:
   stage: build
-  tags: [gitlab_runner_1]
+  tags: [gitlab_runner_1]        # твой shell-runner
   only:
-    changes: [backend/**/*]
+    changes: [backend/**/*]       # триггерим при любых изменениях внутри backend/
   script:
     - cd backend
     - mvn -B -DskipTests package
   artifacts:
     name: "backend-$CI_COMMIT_SHORT_SHA"
     paths:
-      - backend/target/*.jar        # ← путь как в методичке
+      - backend/target/*.jar      # артефакт как в методичке
     expire_in: 1 week
     when: always
 
 telegram-notification-backend:
   stage: notify
   tags: [gitlab_runner_1]
-  needs: [build-backend-code-job]
+  needs: [build-backend-code-job]  # ждём сборку
   only:
     changes: [backend/**/*]
     variables:
-      - $CI_COMMIT_MESSAGE =~ /send notification/i
+      - $CI_COMMIT_MESSAGE =~ /send notification/i   # шлём только если в сообщении есть фраза
   script: |
-    ARTIFACT_URL="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHA/download?job=build-backend-code-job"
-    MSG="✅ *Backend build success*\nProject: *$CI_PROJECT_PATH*\nBranch: *$CI_COMMIT_REF_NAME*\nCommit: \`$CI_COMMIT_SHORT_SHA\`\nArtifacts: $ARTIFACT_URL"
+    URL_COMMIT="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHA/download?job=build-backend-code-job"
+    URL_REF="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_REF_NAME/download?job=build-backend-code-job"
+
+    MSG="<b>✅ Backend build success</b><br/>
+<b>Project:</b> $CI_PROJECT_PATH<br/>
+<b>Branch:</b> $CI_COMMIT_REF_NAME<br/>
+<b>Commit:</b> <code>$CI_COMMIT_SHORT_SHA</code><br/>
+<b>Artifacts (commit):</b> <a href=\"$URL_COMMIT\">download</a><br/>
+<b>Artifacts (latest on branch):</b> <a href=\"$URL_REF\">download</a>"
+
     curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
-      -d chat_id="$TELEGRAM_CHAT_ID" -d parse_mode=Markdown \
+      -d chat_id="$TELEGRAM_CHAT_ID" \
+      -d parse_mode=HTML \
       --data-urlencode text="$MSG"
