--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,6 @@
 include:
   - local: backend/.gitlab-ci.yml
   - local: frontend/.gitlab-ci.yml
+include:
+  - template: Security/SAST.gitlab-ci.yml 
 #asas
