--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -1,4 +1,7 @@
-stages: [build, notify]
+stages:
+  - build
+  - analyze     # 👈 добавляем стадию для SonarQube
+  - notify
 
 build-frontend-code-job:
   stage: build
@@ -21,6 +24,33 @@ build-frontend-code-job:
     expire_in: 1 week
     when: always
 
+sonarqube_frontend_scan:
+  stage: analyze
+  image:
+    name: sonarsource/sonar-scanner-cli:11
+    entrypoint: [""]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+    GIT_DEPTH: "0"
+  cache:
+    key: "sonar-cache-$CI_COMMIT_REF_SLUG"
+    policy: pull-push
+    paths:
+      - .sonar/cache
+  script:
+    - cd frontend
+    - sonar-scanner \
+        -Dsonar.projectKey=front \           # 👈 ключ проекта из SonarQube
+        -Dsonar.projectName=front \
+        -Dsonar.host.url="$SONAR_HOST_URL" \
+        -Dsonar.login="$SONAR_TOKEN_FRONT"
+  allow_failure: true
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    - if: $CI_COMMIT_BRANCH == 'main'
+    - if: $CI_COMMIT_BRANCH == 'master'
+    - if: $CI_COMMIT_BRANCH == 'develop'
+
 telegram-notification-frontend:
   stage: notify
   tags: [gitlab_runner_1]
@@ -40,4 +70,3 @@ telegram-notification-frontend:
         -d chat_id="$TELEGRAM_CHAT_ID" \
         -d parse_mode=HTML \
         --data-urlencode "text=$MSG"
-
