--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -1,12 +1,14 @@
+# frontend/.gitlab-ci.yml
+
 stages:
   - build
   - analyze
   - notify
 
-# === BUILD (Shell runner) ===
+# ---------- Build frontend (Shell runner) ----------
 build-frontend-code-job:
   stage: build
-  tags: [gitlab_runner_1]        # <-- Shell runner
+  tags: [gitlab_runner_1]         # Shell-runner
   only:
     changes: ["frontend/**/*"]
   before_script:
@@ -25,29 +27,21 @@ build-frontend-code-job:
     expire_in: 1 week
     when: always
 
-# === SAST (Docker runner) ===
-sast:
-  stage: analyze
-  tags: [docker]         # <-- ОБЯЗАТЕЛЬНО Docker runner
-  rules:
-    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
-    - if: $CI_COMMIT_BRANCH =~ /^(main|master|develop)$/
-
-# === SonarQube (Docker runner) ===
+# ---------- SonarQube scan (Docker runner) ----------
 sonarqube_frontend_scan:
   stage: analyze
-  tags: [docker]         # <-- Docker runner
+  tags: [docker]                  # Docker-runner
   image:
     name: sonarsource/sonar-scanner-cli:11
     entrypoint: [""]
   variables:
-    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar/frontend"
     GIT_DEPTH: "0"
   cache:
-    key: "sonar-cache-$CI_COMMIT_REF_SLUG"
+    key: "sonar-front-$CI_COMMIT_REF_SLUG"
     policy: pull-push
     paths:
-      - .sonar/cache
+      - .sonar/frontend/cache
   script:
     - cd frontend
     - sonar-scanner \
@@ -55,12 +49,16 @@ sonarqube_frontend_scan:
         -Dsonar.projectName=front \
         -Dsonar.host.url="$SONAR_HOST_URL" \
         -Dsonar.login="$SONAR_TOKEN_FRONT"
+        # при желании исключи артефакты сборки:
+        # -Dsonar.exclusions=dist/**,build/**,node_modules/**
   allow_failure: true
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
     - if: $CI_COMMIT_BRANCH =~ /^(main|master|develop)$/
+    - changes:
+        - frontend/**/*
 
-# === Telegram (Shell runner, как было) ===
+# ---------- Telegram notification (Shell runner) ----------
 telegram-notification-frontend:
   stage: notify
   tags: [gitlab_runner_1]
@@ -69,11 +67,12 @@ telegram-notification-frontend:
     changes: ["frontend/**/*"]
     variables:
       - "$CI_COMMIT_MESSAGE =~ /send notification/i"
-  script:
-    - |
-      URL_COMMIT="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHA/download?job=build-frontend-code-job"
-      URL_REF="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_REF_NAME/download?job=build-frontend-code-job"
-      MSG=$'<b>✅ Frontend build success</b>\n<b>Project:</b> '"$CI_PROJECT_PATH"$'\n<b>Branch:</b> '"$CI_COMMIT_REF_NAME"$'\n<b>Commit:</b> <code>'"$CI_COMMIT_SHORT_SHA"$'</code>\n<b>Artifacts (commit):</b> <a href="'"$URL_COMMIT"'">download</a>\n<b>Artifacts (latest on branch):</b> <a href="'"$URL_REF"'">download</a>'
-      curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
-        -d chat_id="$TELEGRAM_CHAT_ID" -d parse_mode=HTML \
-        --data-urlencode "text=$MSG"
+  script: |
+    URL_COMMIT="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHA/download?job=build-frontend-code-job"
+    URL_REF="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_REF_NAME/download?job=build-frontend-code-job"
+
+    MSG=$'<b>✅ Frontend build success</b>\n<b>Project:</b> '"$CI_PROJECT_PATH"$'\n<b>Branch:</b> '"$CI_COMMIT_REF_NAME"$'\n<b>Commit:</b> <code>'"$CI_COMMIT_SHORT_SHA"$'</code>\n<b>Artifacts (commit):</b> <a href="'"$URL_COMMIT"'">download</a>\n<b>Artifacts (latest on branch):</b> <a href="'"$URL_REF"'">download</a>'
+
+    curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+      -d chat_id="$TELEGRAM_CHAT_ID" -d parse_mode=HTML \
+      --data-urlencode "text=$MSG"
