--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,5 +5,7 @@ default:
 include:
   - local: backend/.gitlab-ci.yml
   - local: frontend/.gitlab-ci.yml
+
+include:
   - template: Security/SAST.gitlab-ci.yml 
 #asas
