--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -1,19 +1,61 @@
-stages: [build, notify]
+# backend/.gitlab-ci.yml
+default:
+  tags: ["docker"]
+
+stages:
+  - build
+  - test
+  - notify
+  - scan-sonar
+
+include:
+  - template: Security/SAST.gitlab-ci.yml
 
 build-backend-code-job:
   stage: build
   tags: [gitlab_runner_1]
   only:
     changes: ["backend/**/*"]
+  before_script:
+    - 'export NVM_DIR="$HOME/.nvm"'
+    - '[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"'
   script:
     - cd backend
-    - mvn -B -DskipTests package
+    - ./mvnw clean package -DskipTests
   artifacts:
     name: "backend-$CI_COMMIT_SHORT_SHA"
     paths:
       - backend/target/*.jar
     expire_in: 1 week
     when: always
+
+# Анализ кода SonarQube
+sonar-scan-backend:
+  stage: scan-sonar
+  image:
+    name: sonarsource/sonar-scanner-cli:11
+    entrypoint: [""]
+  needs:
+    - job: build-backend-code-job
+      artifacts: true
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+    GIT_DEPTH: "0"
+  cache:
+    policy: pull-push
+    key: "sonar-cache-$CI_COMMIT_REF_SLUG"
+    paths:
+      - "${SONAR_USER_HOME}/cache"
+      - sonar-scanner/
+  script:
+    - cd backend
+    - sonar-scanner -Dsonar.host.url="${SONAR_HOST_URL}" -Dsonar.login="${SONAR_TOKEN_BACK}" -Dsonar.projectKey=backend-java
+  allow_failure: true
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    - if: $CI_COMMIT_BRANCH == 'master'
+    - if: $CI_COMMIT_BRANCH == 'main'
+    - if: $CI_COMMIT_BRANCH == 'develop'
 
 telegram-notification-backend:
   stage: notify
@@ -23,16 +65,10 @@ telegram-notification-backend:
     changes: ["backend/**/*"]
     variables:
       - "$CI_COMMIT_MESSAGE =~ /send notification/i"
-  script:
-    - |
-      URL_COMMIT="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHA/download?job=build-backend-code-job"
-      URL_REF="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_REF_NAME/download?job=build-backend-code-job"
-
-      # Формируем текст с \n (переводами строк). HTML-теги <b>, <code>, <a> поддерживаются.
-      MSG=$'<b>✅ Backend build success</b>\n<b>Project:</b> '"$CI_PROJECT_PATH"$'\n<b>Branch:</b> '"$CI_COMMIT_REF_NAME"$'\n<b>Commit:</b> <code>'"$CI_COMMIT_SHORT_SHA"$'</code>\n<b>Artifacts (commit):</b> <a href="'"$URL_COMMIT"'">download</a>\n<b>Artifacts (latest on branch):</b> <a href="'"$URL_REF"'">download</a>'
-
-      curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
-        -d chat_id="$TELEGRAM_CHAT_ID" \
-        -d parse_mode=HTML \
-        --data-urlencode "text=$MSG"
-
+  script: |
+    URL_COMMIT="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHA/download?job=build-backend-code-job"
+    URL_REF="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_REF_NAME/download?job=build-backend-code-job"
+    MSG=$'<b>✅ Backend build success</b>\n<b>Project:</b> '"$CI_PROJECT_PATH"$'\n<b>Branch:</b> '"$CI_COMMIT_REF_NAME"$'\n<b>Commit:</b> <code>'"$CI_COMMIT_SHORT_SHA"$'</code>\n<b>Artifacts (commit):</b> <a href="'"$URL_COMMIT"'">download</a>\n<b>Artifacts (latest on branch):</b> <a href="'"$URL_REF"'">download</a>'
+    curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+      -d chat_id="$TELEGRAM_CHAT_ID" -d parse_mode=HTML \
+      --data-urlencode "text=$MSG"
