--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -7,50 +7,57 @@ stages:
   - test
   - scan-sonar
   - notify
- 
 
 include:
   - template: Security/SAST.gitlab-ci.yml
 
+# ---------- Build ----------
 build-backend-code-job:
   stage: build
   tags: [gitlab_runner_1]
   only:
     changes: ["backend/**/*"]
+  image: maven:3-eclipse-temurin-17
   before_script:
-    - 'export NVM_DIR="$HOME/.nvm"'
-    - '[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"'
+    - echo "Build job: using Maven image"
   script:
     - cd backend
-    - ./mvnw clean package -DskipTests
+    # если у вас в репо есть mvnw — можно использовать ./mvnw; тут использую mvn (image содержит maven)
+    - mvn -B -Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository clean package -DskipTests
   artifacts:
     name: "backend-$CI_COMMIT_SHORT_SHA"
     paths:
       - backend/target/*.jar
     expire_in: 1 week
     when: always
+  cache:
+    key: "m2-cache-$CI_COMMIT_REF_SLUG"
+    paths:
+      - ${CI_PROJECT_DIR}/.m2/repository
 
-# Анализ кода SonarQube
+# ---------- Sonar (Maven) ----------
 sonar-scan-backend:
   stage: scan-sonar
-  image:
-    name: sonarsource/sonar-scanner-cli:11
-    entrypoint: [""]
+  image: maven:3-eclipse-temurin-17
   needs:
     - job: build-backend-code-job
       artifacts: true
   variables:
+    # Sonar cache и локальный maven-репозиторий уже используются для передачи зависимостей
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
     GIT_DEPTH: "0"
+    MAVEN_OPTS: "-Xmx1024m"
   cache:
     policy: pull-push
     key: "sonar-cache-$CI_COMMIT_REF_SLUG"
     paths:
       - "${SONAR_USER_HOME}/cache"
-      - sonar-scanner/
-  script:
+      - ${CI_PROJECT_DIR}/.m2/repository
+  before_script:
     - cd backend
-    - sonar-scanner -Dsonar.host.url="${SONAR_HOST_URL}" -Dsonar.login="${SONAR_TOKEN_BACK}" -Dsonar.projectKey=backend-java
+  script:
+    # используем локальный репозиторий, чтобы анализаторы не перекомпилировали проект
+    - mvn -B -Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.host.url="${SONAR_HOST_URL}" -Dsonar.login="${SONAR_TOKEN_BACK}" -Dsonar.projectKey=backend-java
   allow_failure: true
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
@@ -58,6 +65,7 @@ sonar-scan-backend:
     - if: $CI_COMMIT_BRANCH == 'main'
     - if: $CI_COMMIT_BRANCH == 'develop'
 
+# ---------- Notify ----------
 telegram-notification-backend:
   stage: notify
   tags: [gitlab_runner_1]
