--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-# backend/.gitlab-ci.yml
 default:
   tags: ["docker"]
 
@@ -37,9 +36,7 @@ build-backend-code-job:
 # ---------- Sonar (Maven) ----------
 sonar-scan-backend:
   stage: scan-sonar
-  image:
-    name: maven:3-eclipse-temurin-17
-    entrypoint: [""]
+  image: maven:3-eclipse-temurin-17
   needs:
     - job: build-backend-code-job
       artifacts: true
@@ -47,8 +44,6 @@ sonar-scan-backend:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
     GIT_DEPTH: "0"
     MAVEN_OPTS: "-Xmx1024m"
-    # если используете spotbugs/компиляцию, можно добавить:
-    # COMPILE: "false"
   cache:
     policy: pull-push
     key: "sonar-cache-$CI_COMMIT_REF_SLUG"
@@ -59,7 +54,13 @@ sonar-scan-backend:
     - echo "Preparing sonar scan"
     - cd backend
   script:
-    - mvn -B -Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.host.url="${SONAR_HOST_URL}" -Dsonar.login="${SONAR_TOKEN_BACK}" -Dsonar.projectKey=backend-java
+    - mvn -B -Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository 
+        org.sonarsource.scanner.maven:sonar-maven-plugin:sonar 
+        -Dsonar.host.url="${SONAR_HOST_URL}" 
+        -Dsonar.login="${SONAR_TOKEN_BACK}" 
+        -Dsonar.projectKey=backend-java
+        -Dsonar.projectName=backend-java
+        -Dsonar.qualitygate.wait=true
   allow_failure: true
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
@@ -78,7 +79,7 @@ telegram-notification-backend:
       - "$CI_COMMIT_MESSAGE =~ /send notification/i"
   script: |
     URL_COMMIT="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHA/download?job=build-backend-code-job"
-    URL_REF="$CI_PROJECT_URL/-/jobs/artifacts/$CI_PROJECT_REF_NAME/download?job=build-backend-code-job"
+    URL_REF="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_REF_NAME/download?job=build-backend-code-job"
     MSG=$'<b>✅ Backend build success</b>\n<b>Project:</b> '"$CI_PROJECT_PATH"$'\n<b>Branch:</b> '"$CI_COMMIT_REF_NAME"$'\n<b>Commit:</b> <code>'"$CI_COMMIT_SHORT_SHA"$'</code>\n<b>Artifacts (commit):</b> <a href="'"$URL_COMMIT"'">download</a>\n<b>Artifacts (latest on branch):</b> <a href="'"$URL_REF"'">download</a>'
     curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
       -d chat_id="$TELEGRAM_CHAT_ID" -d parse_mode=HTML \
