--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -1,25 +1,16 @@
 default:
   tags: ["docker"]
 
-stages:
-  - build
-  - test
-  - notify
+stages: [build, notify]
 
-
-
-# ---------- Build ----------
 build-backend-code-job:
   stage: build
   tags: [gitlab_runner_1]
   only:
     changes: ["backend/**/*"]
-  before_script:
-    - 'export NVM_DIR="$HOME/.nvm"'
-    - '[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"'
   script:
     - cd backend
-    - ./mvnw clean package -DskipTests
+    - mvn -B -DskipTests package
   artifacts:
     name: "backend-$CI_COMMIT_SHORT_SHA"
     paths:
@@ -27,10 +18,6 @@ build-backend-code-job:
     expire_in: 1 week
     when: always
 
-include:
-  - template: Security/SAST.gitlab-ci.yml
-
-# ---------- Notify ----------
 telegram-notification-backend:
   stage: notify
   tags: [gitlab_runner_1]
@@ -39,10 +26,15 @@ telegram-notification-backend:
     changes: ["backend/**/*"]
     variables:
       - "$CI_COMMIT_MESSAGE =~ /send notification/i"
-  script: |
-    URL_COMMIT="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHA/download?job=build-backend-code-job"
-    URL_REF="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_REF_NAME/download?job=build-backend-code-job"
-    MSG=$'<b>✅ Backend build success</b>\n<b>Project:</b> '"$CI_PROJECT_PATH"$'\n<b>Branch:</b> '"$CI_COMMIT_REF_NAME"$'\n<b>Commit:</b> <code>'"$CI_COMMIT_SHORT_SHA"$'</code>\n<b>Artifacts (commit):</b> <a href="'"$URL_COMMIT"'">download</a>\n<b>Artifacts (latest on branch):</b> <a href="'"$URL_REF"'">download</a>'
-    curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
-      -d chat_id="$TELEGRAM_CHAT_ID" -d parse_mode=HTML \
-      --data-urlencode "text=$MSG"
+  script:
+    - |
+      URL_COMMIT="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHA/download?job=build-backend-code-job"
+      URL_REF="$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_REF_NAME/download?job=build-backend-code-job"
+
+      # Формируем текст с \n (переводами строк). HTML-теги <b>, <code>, <a> поддерживаются.
+      MSG=$'<b>✅ Backend build success</b>\n<b>Project:</b> '"$CI_PROJECT_PATH"$'\n<b>Branch:</b> '"$CI_COMMIT_REF_NAME"$'\n<b>Commit:</b> <code>'"$CI_COMMIT_SHORT_SHA"$'</code>\n<b>Artifacts (commit):</b> <a href="'"$URL_COMMIT"'">download</a>\n<b>Artifacts (latest on branch):</b> <a href="'"$URL_REF"'">download</a>'
+
+      curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+        -d chat_id="$TELEGRAM_CHAT_ID" \
+        -d parse_mode=HTML \
+        --data-urlencode "text=$MSG"
