--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -39,6 +39,7 @@ sonar-scan-frontend:
   needs:
     - job: build-frontend-code-job
       artifacts: true
+      optional: true  ##
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
     GIT_DEPTH: "0"
