--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -29,7 +29,8 @@ sonar-scan-backend:
   tags: ["docker"]
   needs:
     - job: build-backend-code-job
-      artifacts: false
+      artifacts: true
+      optional: true
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
     GIT_DEPTH: "0"
