--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -1,16 +1,12 @@
-# frontend/.gitlab-ci.yml
-# Примечание: замените "docker" на тег вашего Docker-runner если он другой.
-
 stages:
   - build
   - analyze
   - test
   - notify
 
-# ---------- сборка фронта (shell-runner) ----------
 build-frontend-code-job:
   stage: build
-  tags: ["gitlab_runner_1"]     # твой Shell-runner, который умеет собирать node
+  tags: ["gitlab_runner_1"]     
   only:
     changes: ["frontend/**/*"]
   before_script:
@@ -29,17 +25,17 @@ build-frontend-code-job:
     expire_in: 1 week
     when: always
 
-# ---------- Sonar анализ (docker-runner with sonar-scanner image) ----------
+
 sonar-scan-frontend:
   stage: analyze
   image:
     name: sonarsource/sonar-scanner-cli:11
     entrypoint: [""]
-  tags: ["docker"]   # <- должен попасть на Docker-раннер; замените тег при необходимости
+  tags: ["docker"]  
   needs:
     - job: build-frontend-code-job
       artifacts: true
-      optional: true  ##
+      optional: true 
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
     GIT_DEPTH: "0"
@@ -59,11 +55,10 @@ sonar-scan-frontend:
     - if: $CI_COMMIT_BRANCH == 'main'
     - if: $CI_COMMIT_BRANCH == 'develop'
 
-# ---------- SAST (по шаблону GitLab) ----------
 include:
   - template: Security/SAST.gitlab-ci.yml
 
-# ---------- уведомление (telegram) ----------
+
 telegram-notification-frontend:
   stage: notify
   tags: ["gitlab_runner_1"]
@@ -79,3 +74,4 @@ telegram-notification-frontend:
     curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
       -d chat_id="$TELEGRAM_CHAT_ID" -d parse_mode=HTML \
       --data-urlencode "text=$MSG"
+
